# Wikia-ubuntu-unity-scope

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  manifest.json  wikia-scope.cbp
data/: CMakeLists.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake  wikia-preview.cpp  wikia-preview.h  wikia-query.cpp  wikia-query.h  wikia-scope.cpp  wikia-scope.h  wikia-scope.ini
test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  simpletest
